# clawresearch-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/clawresearch_mcp/: __init__.py  client.py  server.py
tests/: test_server.py
